# girouette

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  config.yml  release.toml
.github/workflows/: audit.yml  build.yaml  publish.yaml
doc/: girouette.1.md
example_configs/: classic.yml  forecast.yml  monokai_nerd_fonts.yml  solarized_dark.yml
src/: cli.rs  config.rs  lib.rs  main.rs  response.rs  segments.rs  serde_utils.rs
src/api/: current.rs  mod.rs  one_call.rs  pollution.rs
src/geoclue/: client.rs  location.rs  manager.rs  mod.rs
