[package]
name = 'girouette'
version = "0.3.1-dev"
authors = ['Antoine Gourlay <antoine@gourlay.fr>']
edition = '2018'

[dependencies]
anyhow = "1"
chrono = '0.4'
directories = '2'
humantime = '2'
log = '0.4'
pretty_env_logger = '0.4'
termcolor = '1.1'
serde_json = '1'

[dependencies.reqwest]
version = '0.10'
default-features = false

# use rusttls when building a static executable:
# until rust-lang/cargo/issues/2524 is stable we need features to do this
[features]
default = ['reqwest/default-tls']
static = ['reqwest/rustls-tls']

[dependencies.structopt]
version = '0.3'
default-features = false
features = ['suggestions']

[dependencies.config]
version = '0.10'
default-features = false
features = ['yaml']

[dependencies.serde]
version = '1'
features = ['derive']

[dependencies.tokio]
version = '0.2'
features = ['rt-core']

[profile.release]
lto = true
