[package]
name = 'girouette'
version = "0.6.0-dev"
authors = ['Antoine Gourlay <antoine@gourlay.fr>']
edition = '2018'

[dependencies]
anyhow = "1"
chrono = '0.4'
directories-next = '2'
humantime = '2'
log = '0.4'
pretty_env_logger = '0.4'
termcolor = '1.1'
serde_json = '1'
hex = "0.4"
dbus-tokio = { version = '0.7', optional = true }
futures-util = { version = '0.3', optional = true }

[dependencies.reqwest]
version = '0.11'
default-features = false

# use rusttls when building a static executable:
# until rust-lang/cargo/issues/2524 is stable we need features to do this
[features]
default = ['dynamic', 'geoclue']
# cannot support geoclue in a static build: dbus-rs cannot be built statically
# (dbus-1 links to a whole bunch of things, like systemd)
default-static = ['static']

dynamic = ['reqwest/default-tls']
static = ['reqwest/rustls-tls']
geoclue = ['dbus', 'dbus-tokio', 'futures-util']

[dependencies.structopt]
version = '0.3'
default-features = false
features = ['suggestions']

[build-dependencies.structopt]
version = '0.3'
default-features = false
features = ['suggestions']

[dependencies.config]
version = '0.11'
default-features = false
features = ['yaml']

[dependencies.serde]
version = '1'
features = ['derive']

[build-dependencies.serde]
version = '1'
features = ['derive']

[dependencies.tokio]
version = '1'
features = ['rt']

[dependencies.dbus]
version = '0.9'
features = ['futures']
optional = true

[build-dependencies]
version_check = "0.9"

[profile.release]
lto = true
