[package]
name = "girouette"
version = "0.7.0-dev"
authors = ["Antoine Gourlay <antoine@gourlay.fr>"]
edition = "2021"
rust-version = "1.57"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["std", "clock", "unstable-locales"], default-features = false }
directories-next = "2"
humantime = "2"
log = "0.4"
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "atty", "humantime"] }
termcolor = "1.1"
serde_json = "1"
hex = "0.4"
dbus-tokio = { version = "0.7", optional = true }
futures-util = { version = "0.3", optional = true }

[dependencies.reqwest]
version = "0.11"
default-features = false

# use rusttls when building a static executable:
# until rust-lang/cargo/issues/2524 is stable we need features to do this
[features]
default = ["dynamic", "geoclue"]
# cannot support geoclue in a static build: dbus-rs cannot be built statically
# (dbus-1 links to a whole bunch of things, like systemd)
default-static = ["static"]

dynamic = ["reqwest/default-tls"]
static = ["reqwest/rustls-tls"]
geoclue = ["dbus", "dbus-tokio", "futures-util"]

[dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[build-dependencies.clap]
version = "3"
features = ["derive", "cargo", "wrap_help"]

[dependencies.config]
version = "0.11"
default-features = false
features = ["yaml"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.tokio]
version = "1"
features = ["rt", "time"]

[dependencies.dbus]
version = "0.9"
features = ["futures"]
optional = true

[build-dependencies]
version_check = "0.9"
serde = { version = "1", features = ["derive"] }
log = "0.4"
clap_complete = "3"

[profile.release]
lto = true
